--- a/Platzi-Video/src/assets/styles/components/Footer.scss
+++ b/Platzi-Video/src/assets/styles/components/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
     align-items: center;
-    background-color: #1481ff;
+    background-color: #655560;
     display: flex;
     height: 100px;
     width: 100%;
