--- a/Platzi-Video/src/assets/styles/components/Search.scss
+++ b/Platzi-Video/src/assets/styles/components/Search.scss
@@ -17,7 +17,7 @@
       font-size: 30px;
     }
   }
-
+/* 
   .input {
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid white;
@@ -34,4 +34,4 @@
   
   ::placeholder {
     color: white;
-  }
+  } */
