--- a/Platzi-Video/src/assets/styles/components/Header.scss
+++ b/Platzi-Video/src/assets/styles/components/Header.scss
@@ -50,6 +50,7 @@
 .header__menu--profile img{
     margin-right: 8px;
     width: 40px;
+    border-radius: 20px;
     
 }
 .header__menu--profile p{
